# gm-smart-shield

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  fix_test.py  get_response.py  lefthook.yml  test.py  verify_notes.py
.github/: CODEOWNERS
.render/: render.yaml
apps/api/: AGENTS.md  Dockerfile  README.md  pyproject.toml  seed_db.py  test_deepagents.py  test_langchain_ollama.py  test_mcp_client.py
apps/api/gm_shield/: main.py
apps/api/gm_shield/core/: config.py  logging.py  telemetry.py
apps/api/gm_shield/features/chat/: agent.py  models.py  router.py  routes.py  service.py
apps/api/gm_shield/features/encounters/: agent.py  models.py  router.py  routes.py  service.py
apps/api/gm_shield/features/health/: routes.py
apps/api/gm_shield/features/knowledge/: models.py  router.py  schemas.py  schemas_agent.py  service.py  tasks.py
apps/api/gm_shield/features/mcp/: routes.py  server.py  server_stdio.py
apps/api/gm_shield/features/notes/: agent.py  entities.py  git_sync.py  models.py  router.py  routes.py  schemas.py  service.py
apps/api/gm_shield/features/references/: agent.py  models.py  router.py  service.py
apps/api/gm_shield/features/sheets/: agent.py  models.py  router.py  schemas.py  service.py
apps/api/gm_shield/shared/ai/: __init__.py  base.py  mcp.py  ollama.py
apps/api/gm_shield/shared/database/: chroma.py  sqlite.py
apps/api/gm_shield/shared/llm/: __init__.py  agent.py  client.py  config.py  subagents.py
apps/api/gm_shield/shared/middleware/: __init__.py  rate_limit.py
apps/api/gm_shield/shared/worker/: base.py  memory.py
apps/api/scripts/: demo_agents.py
apps/api/tests/: conftest.py
apps/api/tests/features/: background_agents.feature  chat.feature  encounter_agent.feature  health_check.feature  knowledge_status.feature  llm_health.feature  notes_flow.feature  query_agent.feature  tagging_agent.feature
apps/api/tests/features/steps/: test_background_agents.py  test_chat_steps.py  test_encounter_agent.py  test_health_check.py  test_knowledge_status.py  test_llm_health.py  test_notes_flow.py  test_query_agent.py  test_tagging_agent.py
apps/api/tests/unit/: test_chat.py  test_encounter_agent.py  test_health.py  test_knowledge_extraction.py  test_knowledge_list_stats.py  test_knowledge_routes.py  test_knowledge_service.py  test_logging.py  test_notes_routes.py  test_notes_service.py  test_rate_limiting.py  test_rate_limiting_logic.py  test_reference_agent.py  test_sheet_agent.py  test_tagging_agent.py  test_worker.py
(+82 files in other folders)
