[project]
name = "api"
version = "0.1.0"
description = "GM Smart Shield API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.20.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "lefthook>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-bdd>=7.0.0",
    "ruff>=0.3.0",
]
